# oiioreader-maya

./: CMakeLists.txt  README.md  test.py
include/: exrOIIOReader.h  oiioReader.h
src/: exrOIIOReader.cpp  exrOIIOReaderMain.cpp  oiioReader.cpp  pluginMain.cpp
